# jobs-scraper-api

./: .env.example  .gitignore  API_REFERENCE.md  README.md  main.py  pyproject.toml
src/admin/: __init__.py  create_key.py  list_keys.py  revoke_key.py
src/core/: auth.py  config.py  database.py  exceptions.py  models.py  repositories.py  schemas.py  security.py
src/routers/: favorites.py  jobs.py
tests/: __init__.py  test_api.py  test_auth.py  test_favorites.py  test_job_details_markdown.py  test_repository.py
