[project]
name = "job-scrapers-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=4.2.1",
    "fastapi[standard]>=0.122.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.44",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.4",
    "httpx>=0.28.1",
]
